--- a/docs/stylesheet/article.css
+++ b/docs/stylesheet/article.css
@@ -10,44 +10,58 @@
 }
 
 .article__title {
-
+    font-size: 28px;
 }
 
 .article__image {
-
-
+    padding-top: 20px;
 }
 
 .article__info {
-
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    margin-top: 10px;
 }
 
 .article__info-item {
-
+    margin-top: 5px;
+    color: gray;
+    font-size: 16px;
 }
 
 .article__info-item:first-child {
+    margin-top: 0;
+}
 
+.article__body {
+    margin-top: 20px;
 }
 
 @media screen and (min-width: 760px){
     .article__info{
-
+        flex-direction: row;
+        justify-content: end;
+        margin-top: 10px;
     }
     .article__info-item{
-
+        margin-left: 10px;
     }
 }
 
 /* section */
 .section:nth-child(n+2){
-
+    margin-top: 20px;
 }
 
 .section__title{
-
+    font-size: 24px;
+    padding-left: 10px;
+    border-left: 3px solid blueviolet;
 }
 
 .section__text{
-    
+    margin-top: 10px;
+    font-size: 16px;
+    line-height: 32px;
 }
